add more swagger docs for stream apis
